<resources>
    <string name="app_name">Rada3.0</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Log In</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_lucky_wheel">Lucky Wheel</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Main Activity-->
    <color name="viewBg">#f1f5f8</color>
    <color name="album_title">#4c4c4c</color>

    <!--Editor Activity-->
    <string name="description">Description</string>
    <string name="desc_group">ImageView</string>
    <string name="desc_backBtn">toolbarBackBtn</string>
    <string name="group">Group</string>
    <string name="tv_add_new_option">Додати варіант відповіді</string>
    <string name="tv_open_survey">Закрите голосування</string>
    <string name="tv_one_option">Один варіант відповіді</string>
    <string name="tv_duration">Тривалість</string>
    <string name="tv_duration_time">02:00</string>
    <string name="tv_participants">Учасники</string>
    <string name="tv_participants_title">Виберіть учасника</string>
    <string name="tv_color">Колір</string>
    <string name="ed_option">Варіант відповіді</string>
    <string name="tv_duration_min">хв</string>
    <string name="tv_duration_hour">год</string>
    <string name="tv_duration_2min">2 хв</string>
    <string name="tv_duration_10min">10 хв</string>
    <string name="tv_duration_30min">30 хв</string>
    <string name="tv_duration_1h">1 год</string>
    <string name="tv_duration_custom">Custom</string>
    <string name="ok_btn">OK</string>
    <string name="survey_toast">You don\'t have permission to edit this Survey.
        You can edit only Surveys you created.</string>

    <!--Editor Activity End-->

    <!--BottomSheet Activity Start-->
    <string name="bottomSheet_search_hint">Type a name or email</string>
    <!--BottomSheet Activity End-->

    <!--LuckyWheel Activity Start-->
    <string name="spin_btn">Spin</string>
    <!--LuckyWheel Activity End-->

    <!--DurationPicker Activity Start-->
    <string name="time_hour_00">00</string>
    <string name="time_hour_desc">h</string>
    <string name="time_minutes_00">00</string>
    <string name="time_minutes_desc">m</string>
    <string name="time_seconds_00">00</string>
    <string name="time_seconds_desc">s</string>
    <string name="deleteBtn">time_picker_deleteBtn</string>

    <string name="time_picker_1">1</string>
    <string name="time_picker_2">2</string>
    <string name="time_picker_3">3</string>
    <string name="time_picker_4">4</string>
    <string name="time_picker_5">5</string>
    <string name="time_picker_6">6</string>
    <string name="time_picker_7">7</string>
    <string name="time_picker_8">8</string>
    <string name="time_picker_9">9</string>
    <string name="time_picker_0">0</string>
    <string name="time_picker_button1">Cancel</string>
    <string name="time_picker_button2">Save</string>
    <!--DurationPicker Activity End-->

    <!-- Dialog -->
    <string name="dialog_ok_btn">OK</string>

    <string name="server_key">AAAAd9NLRsU:APA91bFUCs_hI7ndUjAP80N4FMj1hrb9cmt8OJWErz1eSWWpxfXadq7npnQJQRSHAga5qGUUGnLBlktNdGgbH7bR7OHKua4KF-n6y-X0f0U6JMeLnx5wnHqWkhJ-F3vrg6FVnlOEjux9</string>

    <!-- Intro Res Start-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello!</string>
    <string name="slide_1_desc">The easiest way to make a choice with your friends!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <!-- Intro Res End-->

    <!-- FireBse Template Start -->
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <!-- FireBse Template Start -->
</resources>
