<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_toolbar"
    app:elevation="@dimen/margin_small"
    tools:context="com.springcamp.rostykboiko.rada3.Main.view.MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/options_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        card_view:cardElevation="@dimen/card_elevation">

        <RelativeLayout
            android:id="@+id/rv_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/option_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/option_recycler_view">

                <ImageView
                    android:id="@+id/btn_add_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_material_plus" />

                <TextView
                    android:id="@+id/Tv_add_new_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:layout_marginStart="@dimen/margin_tab"
                    android:text="@string/tv_add_new_option"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pref_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options_card_view"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        card_view:cardElevation="@dimen/card_elevation">

        <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            app:theme="@style/AppTheme.TextItem">

            <TextView
                android:id="@+id/Tv_close_survey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_open_survey"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/close_survey_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/margin_switch"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="@dimen/margin_switch" />

            <TextView
                android:id="@+id/Tv_one_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Tv_close_survey"
                android:text="@string/tv_one_option"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/one_option_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/close_survey_switch"
                android:layout_marginBottom="@dimen/margin_switch"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="@dimen/margin_switch" />

            <TextView
                android:id="@+id/Tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Tv_one_option"
                android:text="@string/tv_duration"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Tv_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Tv_duration"
                android:text="@string/tv_participants"
                android:textSize="16sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
