<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:LuckyWheel="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:theme="@style/AppTheme.TextItem"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="@dimen/zero">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                    <ImageView
                        android:id="@+id/backBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/desc_backBtn"
                        android:src="@drawable/ic_arrow_left" />

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_medium"
                        android:paddingEnd="@dimen/margin_large"
                        android:paddingStart="@dimen/margin_large"
                        android:text="@string/title_lucky_wheel"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold" />
                </android.support.v7.widget.Toolbar>
            </LinearLayout>
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:id="@+id/rv_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_toolbar">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/option_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:scrollbars="vertical" />

            <RelativeLayout
                android:id="@+id/rv_add_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/option_recycler_view"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/btn_add_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/item_addBtn"
                    android:paddingStart="@dimen/item_addBtn"
                    android:paddingTop="@dimen/item_addBtnTop"
                    android:src="@drawable/ic_material_plus" />

                <TextView
                    android:id="@+id/Tv_add_new_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_marginStart="@dimen/margin_tab"
                    android:padding="@dimen/margin_small"
                    android:text="@string/tv_add_new_option"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lwv_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.springcamp.rostykboiko.rada3.luckyWheel.view.LuckyWheel
                android:id="@+id/lwv"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:visibility="gone"
                LuckyWheel:background_color="@color/colorPrimary" />

            <TextView
                android:id="@+id/chosenOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_large"
                android:visibility="gone"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_custom_lucky"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/colorAccent" />

</android.support.design.widget.CoordinatorLayout>